--- a/index.html
+++ b/index.html
@@ -77,6 +77,43 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+    <script>
+        (() => {
+          const d = document, s = d.currentScript;
+          const t = d.createElement('div'), p = s.parentNode;
+          t.classList.add('ebp_bp_263');
+          t.style.display = 'inline-block';
+          p.insertBefore(t, s);
+          window.addEventListener('DOMContentLoaded', () => {
+            if (!d.querySelector('.ebpls_263')) {
+              const bps = document.createElement('script');
+              bps.type = 'text/javascript';
+              bps.async = true;
+              bps.src = 'https://ebrokerpartner.pl/banner-pool/banner_pool.php?pid=263';
+              bps.classList.add('ebpls_263');
+              p.insertBefore(bps, t);
+              bps.onload = function(){
+                if (typeof rebpbp263 === 'undefined') return;
+                d.querySelectorAll('.ebp_bp_263').forEach(i => {
+                  i.innerHTML = rebpbp263();
+                })
+                iebpbp263();
+              };
+            }
+          });
+        })();
+      </script>
+
+
+
+
+
+      
 </section>
 
 <section data-bs-version="5.1" class="features12 cid-tdznj7VKpq" id="features13-u">
