--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
       });
     })();
   </script>
+  <a href="https://jakubkamycki.ebrokerpartner.pl/bc_click?i=323&p=257695&bag_id=41" target="_blank"><img src="https://kreacje.ebroker.pl/kreacje/792a50a94ff34eeeeca2b19c114cd80b.jpg" border="0" width="950" height="200" /></a><img src="https://jakubkamycki.ebrokerpartner.pl/bc_view?i=323&p=257695" width="1" height="1" border="0" />
   
   
 </body>
