--- a/index.html
+++ b/index.html
@@ -237,34 +237,23 @@
     </div>
 </section>
   
-<script>
-    (() => {
-      const d = document, s = d.currentScript;
-      const t = d.createElement('div'), p = s.parentNode;
-      t.classList.add('ebp_bp_263');
-      t.style.display = 'inline-block';
-      p.insertBefore(t, s);
-      window.addEventListener('DOMContentLoaded', () => {
-        if (!d.querySelector('.ebpls_263')) {
-          const bps = document.createElement('script');
-          bps.type = 'text/javascript';
-          bps.async = true;
-          bps.src = 'https://ebrokerpartner.pl/banner-pool/banner_pool.php?pid=263';
-          bps.classList.add('ebpls_263');
-          p.insertBefore(bps, t);
-          bps.onload = function(){
-            if (typeof rebpbp263 === 'undefined') return;
-            d.querySelectorAll('.ebp_bp_263').forEach(i => {
-              i.innerHTML = rebpbp263();
-            })
-            iebpbp263();
-          };
-        }
-      });
-    })();
-  </script>
-  <a href="https://jakubkamycki.ebrokerpartner.pl/bc_click?i=323&p=257695&bag_id=41" target="_blank"><img src="https://kreacje.ebroker.pl/kreacje/792a50a94ff34eeeeca2b19c114cd80b.jpg" border="0" width="950" height="200" /></a><img src="https://jakubkamycki.ebrokerpartner.pl/bc_view?i=323&p=257695" width="1" height="1" border="0" />
-  
-  
+<div><div id="content_28602">
+</div><script type="text/javascript" id="script_33042">
+    var tabw = new Array();
+    tabw['content_id'] = 'content_28602';
+    tabw['vcpt'] = 3;tabw['vcpst'] = '4_2';
+    tabw['domain'] = 'jakubkamycki.ebrokerpartner.pl';
+    (function() {var ebw = document.createElement('script');
+     ebw.type = 'text/javascript';
+      ebw.async = true;
+      ebw.src = '//jakubkamycki.ebrokerpartner.pl/js/arcade/widget.js',
+      elemw = document.getElementById('script_33042');
+      parentDiv = elemw.parentNode;
+      parentDiv.insertBefore(ebw, elemw);
+      ebw.onload = function(){eWidget.init(tabw);};})
+      ();
+      </script>
+</div>
+ 
 </body>
 </html>
